next js frontend mostly finished

--- a/nextjs-posture/src/app/globals.css
+++ b/nextjs-posture/src/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/* 
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -75,4 +75,36 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+} */
+
+
+.fade-in {
+  opacity: 0;
+  animation: fadeIn 1s ease-in-out forwards;
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+
+/* Custom CSS for fade-in and slide-in from right */
+.slide-in-right {
+  transform: translateX(100px); /* Start 100px off the screen to the right */
+  animation: slideInRight 1s ease-in-out forwards;
+}
+
+@keyframes slideInRight {
+  from {
+    transform: translateX(100px); /* Start off the screen */
+  }
+  to {
+    transform: translateX(0); /* End in the original position */
+  }
+}
+
